// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Columns 1`] = `
<div
  className="is-variable columns is-gapless is-fullhd"
/>
`;

exports[`Columns 2`] = `
<div
  className="is-variable columns is-1-mobile is-8"
/>
`;

exports[`Columns 3`] = `
<div
  className="is-variable columns is-0"
/>
`;
